--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="assets/css/main.css">
     <title>Hello World!</title>
   </head>
   <body>
