Added basic menu edit and test release

--- a/editor.html
+++ b/editor.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/css/edit.css">
+    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
     <title>Markdown Reader - Edit</title>
 </head>
 
@@ -11,6 +12,11 @@
     <div class="header" id="header">
         <h1>Edit</h1>
         <button type="button" class="done-btn">Submit</button>
+    </div>
+    <div class="edit-menu" id="edit-menu">
+        <button type="button" id="bold"><i class="fa fa-bold" aria-hidden="true"></i></button>
+        <button type="button" id="italics"><i class="fa fa-italic" aria-hidden="true"></i></button>
+        <button type="button" id="strikethrough"><i class="fa fa-strikethrough" aria-hidden="true"></i></button>
     </div>
     <div class="edit" id="edit">
         <textarea class="edit-area" id="edit-area" name="edit-area" rows="8" cols="80"></textarea>
