--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
             <h1>Markdown Reader</h1>
             <p class="subtitle">A markdown file viewer. Made with <a href="https://github.com/markdown-it/markdown-it">markdown-it</a>.</p>
         </div>
+        <br /><br />
+        <div class="info" id="info">
+            <span class="version" id="version"></span>
+            <br />
+            <span class="intructions" id="instructions">Hit &#8984;N (or Ctrl+N on Windows) to get started.</span>
+        </div>
     </body>
     <script type="text/javascript">
-        require('./renderer.js')
+        require('./index.js')
     </script>
 </html>
